client/styles/drawer.css
.drawer {
  padding: 15px;
  color: #00bcd4;
  display: flex;
  flex-direction: column;
  /*Change below to change the background/txt of all header colors.*/
  --headers-bg-color: #00bcd4;
  --headers-txt-color: white;
}

.application {
  text-align: center;
  margin: 5px;
  margin-top: 0px;
  /*padding-top: 0px;*/
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  height: 30%;
}


.applicationInfo {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.applicationInfo .appInfo_col_1, .applicationInfo .appInfo_col_2{
  display: flex;
  flex-direction: column;
  padding: 5px;
}

.stageSelection {
  display: flex;
  margin-right: 0px;
}

.notes {
  text-align: center;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  margin-top: 10px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  width: 60%;
}

.contacts {
  text-align: center;
  width: 30%;
  margin-top: 10px;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  overflow: hidden;
}

.notesAndContacts {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.application h1, .notes h1, .contacts h1 {
  background: var(--headers-bg-color);
  color: var(--headers-txt-color);
  margin-bottom: 15px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

